--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,19 @@
-name: Docker Hub Build
+name: Docker Hub
 
 on:
-  push:
-    branches: [ master ]
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 * * * *"
 
 jobs:
   trigger:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Trigger Docker Hub
-      env:
-        DOCKER_TRIGGER_URL: ${{ secrets.DOCKER_TRIGGER_URL }}
-      run: curl -X POST "$DOCKER_TRIGGER_URL"
+      - uses: actions/checkout@master
+      - name: Build
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: dkaoster/nodejs-chrome-selenium
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          snapshot: true
