--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: Docker Hub
 
 on:
   push:
+    branches:
+      - master
   schedule:
     # Run every Sunday at 00:00
     - cron: "0 0 * * 0"
